02_ARM_MCU_Programming/HAL/.metadata/.plugins/org.eclipse.cdt.ui/10.0_SPI - RFID.build.log
16:50:16 **** Incremental Build of configuration Debug for project 10.0_SPI - RFID ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:271: warning: "SPI1_BASE" redefined
  271 | #define SPI1_BASE (0x40013000)
      | 
In file included from ../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:156,
                 from ../Core/Src/main.c:268:
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:984: note: this is the location of the previous definition
  984 | #define SPI1_BASE             (APB2PERIPH_BASE + 0x3000UL)
      | 
../Core/Src/main.c:272: warning: "GPIOA_BASE" redefined
  272 | #define GPIOA_BASE (0x40020000)
      | 
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:999: note: this is the location of the previous definition
  999 | #define GPIOA_BASE            (AHB1PERIPH_BASE + 0x0000UL)
      | 
../Core/Src/main.c:284:3: error: conflicting types for 'SPI_TypeDef'; have 'struct <anonymous>'
  284 | } SPI_TypeDef;
      |   ^~~~~~~~~~~
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:700:3: note: previous declaration of 'SPI_TypeDef' with type 'SPI_TypeDef'
  700 | } SPI_TypeDef;
      |   ^~~~~~~~~~~
../Core/Src/main.c:296:3: error: conflicting types for 'GPIO_TypeDef'; have 'struct <anonymous>'
  296 | } GPIO_TypeDef;
      |   ^~~~~~~~~~~~
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:469:3: note: previous declaration of 'GPIO_TypeDef' with type 'GPIO_TypeDef'
  469 | } GPIO_TypeDef;
      |   ^~~~~~~~~~~~
../Core/Src/main.c: In function 'SystemClock_Config':
../Core/Src/main.c:339:16: error: 'RCC_CFGR_PLLSRC_HSE' undeclared (first use in this function); did you mean 'RCC_PLLCFGR_PLLSRC_HSE'?
  339 |   RCC->CFGR |= RCC_CFGR_PLLSRC_HSE;
      |                ^~~~~~~~~~~~~~~~~~~
      |                RCC_PLLCFGR_PLLSRC_HSE
../Core/Src/main.c:339:16: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:340:16: error: 'RCC_CFGR_PLLMUL9' undeclared (first use in this function); did you mean 'RCC_CFGR_PPRE1'?
  340 |   RCC->CFGR |= RCC_CFGR_PLLMUL9; // Set PLL multiplier (x9)
      |                ^~~~~~~~~~~~~~~~
      |                RCC_CFGR_PPRE1
../Core/Src/main.c: In function 'GPIO_Init':
../Core/Src/main.c:355:26: warning: left shift count >= width of type [-Wshift-count-overflow]
  355 |   GPIOA->AFR[0] |= (0x05 << 45) | (0x05 << 46) | (0x05 << 4*7); // AF5 for SPI1
      |                          ^~
../Core/Src/main.c:355:41: warning: left shift count >= width of type [-Wshift-count-overflow]
  355 |   GPIOA->AFR[0] |= (0x05 << 45) | (0x05 << 46) | (0x05 << 4*7); // AF5 for SPI1
      |                                         ^~
../Core/Src/main.c: In function 'SPI1_Init':
../Core/Src/main.c:374:16: error: 'SPI_CR1_LSBFirst' undeclared (first use in this function); did you mean 'SPI_CR1_LSBFIRST'?
  374 |   SPI1->CR1 |= SPI_CR1_LSBFirst; // Data frame format: MSB first
      |                ^~~~~~~~~~~~~~~~
      |                SPI_CR1_LSBFIRST
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

16:50:17 Build Failed. 6 errors, 4 warnings. (took 1s.452ms)

